@@ -161,3 +161,29 @@ class TableOptionsTest(TestBase):
         table2.create()
         assert [str(x) for x in self.engine.mock if 'CREATE VIRTUAL TABLE' in str(x)]
 
+    def test_table_info(self):
+
+        t1 = Table('foo', self.metadata, info={'x':'y'})
+        t2 = Table('bar', self.metadata, info={})
+        t3 = Table('bat', self.metadata)
+        assert t1.info == {'x':'y'}
+        assert t2.info == {}
+        assert t3.info == {}
+        for t in (t1, t2, t3):
+            t.info['bar'] = 'zip'
+            assert t.info['bar'] == 'zip'
+
+class ColumnOptionsTest(TestBase):
+    def test_column_info(self):
+        
+        c1 = Column('foo', info={'x':'y'})
+        c2 = Column('bar', info={})
+        c3 = Column('bat')
+        assert c1.info == {'x':'y'}
+        assert c2.info == {}
+        assert c3.info == {}
+        
+        for c in (c1, c2, c3):
+            c.info['bar'] = 'zip'
+            assert c.info['bar'] == 'zip'
+
